fixed min width issue on smaller mobile devices

--- a/src/components/NewPost/NewPost.module.scss
+++ b/src/components/NewPost/NewPost.module.scss
@@ -3,7 +3,6 @@
 /* Post not found, loading post..., etc. */
 .altWrapper {
 	width: 90%;
-	min-width: 300px;
 	max-width: 600px;
 	margin: 2rem auto;
 	box-shadow: var(--shadow);
@@ -38,7 +37,6 @@
 
 .wrapper {
 	width: 90%;
-	min-width: 300px;
 	max-width: 600px;
 	margin: 2rem auto;
 	box-shadow: var(--shadow);
@@ -49,7 +47,6 @@
 .article {
 	margin: 0 auto;
 	width: 100%;
-	min-width: 300px;
 	max-width: 600px;
 
 	display: grid;
